--- a/css/Style.css
+++ b/css/Style.css
@@ -16,16 +16,22 @@
   	background: -moz-linear-gradient(left,white,#1da1f2,white);
   	/* Standard syntax */
   	background: linear-gradient(to right,white,#1da1f2,white);
+      margin-bottom: 20px;
 }
 
-#hashtags {
-    
+#txtHashTag {
+    width: 100%;
+    height: 1.2em;
+    font-size: 3em;
+    margin-bottom: 20px;
+    text-align: center;
 }
 
 #buttons {
     width: 100%;
 }
 
-button {
+.button {
     width: 50%;
+    font-size: 3em;
 }
